--- a/index.html
+++ b/index.html
@@ -73,20 +73,11 @@
 <h1>我的前端作品库</h1>
 <ul class="box" id="box">`
 	<li><a href="demo/1/banner-demo.html" target="_blank">1.vue2计划任务</a></li>
+	<li><a href="demo/1/banner-demo.html" target="_blank">2.vue2搜索引擎</a></li>
 </ul>
 <script type="text/javascript">
-	var box      = document.getElementById("box");
-	var box9     = document.getElementById("box9");
-	var sub9     = document.getElementById("sub9");
-	box9.onclick = function (e) {
-		e.preventDefault();
-		var status = sub9.style.display;
-		if (status == 'block') {
-			sub9.style.display = 'none';
-		} else {
-			sub9.style.display = 'block';
-		}
-	}
+	var box = document.getElementById("box");
+
 </script>
 </body>
 </html>
