update for new demo

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 <body>
 <h1>我的前端作品库</h1>
 <ul class="box" id="box">`
-	<li><a href="demo/1/banner-demo.html" target="_blank">1.vue2计划任务</a></li>
-	<li><a href="demo/1/banner-demo.html" target="_blank">2.vue2搜索引擎</a></li>
+	<li><a href="demo/vue-scheduledTask/index.html" target="_blank">1.vue2计划任务</a></li>
+	<li><a href="demo/vue-search/index.html" target="_blank">2.vue2搜索引擎</a></li>
+	<li><a href="demo/SingleLogin/index.html" target="_blank">3.单例模式实现登陆窗遮罩层</a></li>
 </ul>
 <script type="text/javascript">
 	var box = document.getElementById("box");
