--- a/demo/h5demo/demo.html
+++ b/demo/h5demo/demo.html
@@ -20,11 +20,11 @@
     function succCB(pos){
       alert('获取到定位数据成功')
       //console.log(arguments);
-      document.write('定位的时间：'+ pos.timestamp)
-      document.write('纬度：'+pos.coords.latitude)
-      document.write('经度：'+pos.coords.longitude)
-      document.write('海拔：'+pos.coords.altitude)
-      document.write('速度：'+pos.coords.speed)
+      alert('定位的时间：'+ pos.timestamp)
+      // document.write('纬度：'+pos.coords.latitude)
+      // document.write('经度：'+pos.coords.longitude)
+      // document.write('海拔：'+pos.coords.altitude)
+      // document.write('速度：'+pos.coords.speed)
     }
   </script>
 </body>
