--- a/demo/h5demo/demo.html
+++ b/demo/h5demo/demo.html
@@ -18,13 +18,19 @@
     }
 
     function succCB(pos){
-      alert('获取到定位数据成功')
+      var div=document.creatElement("div");
+      div.innerHTML=`定位的时间：${pos.timestamp},
+                     纬度：${pos.coords.latitude},
+                     经度：${pos.coords.longitude},
+                     海拔：${pos.coords.altitude},
+                     速度：${pos.coords.speed}`
       //console.log(arguments);
-      alert('定位的时间：'+ pos.timestamp)
+      // alert('定位的时间：'+ pos.timestamp)
       // document.write('纬度：'+pos.coords.latitude)
       // document.write('经度：'+pos.coords.longitude)
       // document.write('海拔：'+pos.coords.altitude)
       // document.write('速度：'+pos.coords.speed)
+      document.body.appendChild(div);
     }
   </script>
 </body>
