--- a/demo/h5demo/demo.html
+++ b/demo/h5demo/demo.html
@@ -19,10 +19,10 @@
 
     function succCB(pos){
       var div=document.creatElement("div");
-      div.innerHTML=`定位的时间：${pos.timestamp},
-                     纬度：${pos.coords.latitude},
-                     经度：${pos.coords.longitude},
-                     海拔：${pos.coords.altitude},
+      div.innerHTML=`定位的时间：${pos.timestamp}
+                     纬度：${pos.coords.latitude}
+                     经度：${pos.coords.longitude}
+                     海拔：${pos.coords.altitude}
                      速度：${pos.coords.speed}`
       //console.log(arguments);
       // alert('定位的时间：'+ pos.timestamp)
