--- a/demo/h5demo/demo.html
+++ b/demo/h5demo/demo.html
@@ -18,7 +18,7 @@
     }
 
     function succCB(pos){
-      var div=document.creatElement("div");
+      var div=document.createElement("div");
       div.innerHTML=`定位的时间：${pos.timestamp}
                      纬度：${pos.coords.latitude}
                      经度：${pos.coords.longitude}
