--- a/demo/h5demo/demo.html
+++ b/demo/h5demo/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="UTF-8">
   <title></title>
@@ -25,7 +25,7 @@
       // document.write('纬度：'+pos.coords.latitude)
       // document.write('经度：'+pos.coords.longitude)
       // document.write('海拔：'+pos.coords.altitude)
-      // document.write('速度：'+pos.coords.speed)  
+      // document.write('速度：'+pos.coords.speed)
     }
   </script>
 </body>
