--- a/demo/h5demo/demo.html
+++ b/demo/h5demo/demo.html
@@ -3,6 +3,7 @@
 <head lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta charset="UTF-8">
   <style>
     #container{height:100%}
