--- a/demo/h5demo/demo.html
+++ b/demo/h5demo/demo.html
@@ -13,7 +13,7 @@
   <h1>获取定位信息</h1>
   <button id="bt">读取我的定位信息</button>
   <div id="container"></div>
-  <script type="text/javascript" src="https://api.map.baidu.com/getscript?v=2.0&ak=65GXpYmFOGQVfpXsWwrsZGsj1Gyt8g7W"></script>
+  <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=65GXpYmFOGQVfpXsWwrsZGsj1Gyt8g7W"></script>
   <script>
     bt.onclick = function(){
       navigator.geolocation.getCurrentPosition(succCB);
