--- a/demo/h5demo/demo.html
+++ b/demo/h5demo/demo.html
@@ -1,55 +1,28 @@
 <!DOCTYPE html>
 <html>
-
-<head lang="en">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta charset="UTF-8">
-  <style>
-    #container {
-      height: 100%
-    }
-  </style>
-  <title></title>
+<head>
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Hello, World</title>
+<style type="text/css">
+html{height:100%}
+body{height:100%;margin:0px;padding:0px}
+#container{height:100%}
+</style>
+<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=65GXpYmFOGQVfpXsWwrsZGsj1Gyt8g7W">
+//v2.0版本的引用方式：src="http://api.map.baidu.com/api?v=2.0&ak=您的密钥"
+</script>
 </head>
 
 <body>
-  <h1>获取定位信息</h1>
-  <button id="bt">读取我的定位信息</button>
-  <!-- <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=65GXpYmFOGQVfpXsWwrsZGsj1Gyt8g7W"></script> -->
-  <script>
-    // bt.onclick = function(){
-    //   navigator.geolocation.getCurrentPosition(succCB);
-    // }
-    function initialize() {
-      var mp = new BMap.Map('map');
-      mp.centerAndZoom(new BMap.Point(121.491, 31.233), 11);
-    }
-
-    function loadScript() {
-      var script = document.createElement("script");
-      script.src = "https://api.map.baidu.com/api?v=2.0&ak=65GXpYmFOGQVfpXsWwrsZGsj1Gyt8g7W&callback=initialize";
-      document.body.appendChild(script);
-    }
-
-    window.onload = loadScript;
-
-    function succCB(pos) {
-      var div = document.createElement("div");
-      div.id = "container";
-      var map = new BMap.Map("container");
-      var point = new BMap.Point(pos.coords.latitude, pos.coords.longitude);
-      map.centerAndZoom(point, 15);
-      map.enableScrollWheelZoom(true);
-      document.body.appendChild(div);
-      //console.log(arguments);
-      // alert('定位的时间：'+ pos.timestamp)
-      // document.write('纬度：'+pos.coords.latitude)
-      // document.write('经度：'+pos.coords.longitude)
-      // document.write('海拔：'+pos.coords.altitude)
-      // document.write('速度：'+pos.coords.speed)
-    }
-  </script>
+<div id="container"></div>
+<script type="text/javascript">
+var map = new BMap.Map("container");
+// 创建地图实例
+var point = new BMap.Point(116.404, 39.915);
+// 创建点坐标
+map.centerAndZoom(point, 15);
+// 初始化地图，设置中心点坐标和地图级别
+</script>
 </body>
-
 </html>
