--- a/demo/h5demo/demo.html
+++ b/demo/h5demo/demo.html
@@ -16,12 +16,12 @@
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=65GXpYmFOGQVfpXsWwrsZGsj1Gyt8g7W"></script>
   <script>
     bt.onclick = function(){
-      navigator.geolocation.getCurrentPosition(succCB);    
+      navigator.geolocation.getCurrentPosition(succCB);
     }
 
     function succCB(pos){
       var map=new BMap.Map("container");
-      var point = new BMap.Point(pos.coords.latitude, pos.coords.longitude);
+      var point = new BMap.Point(pos.coords.longitude, pos.coords.latitude);
       map.centerAndZoom(point, 15);
       map.enableScrollWheelZoom(true);
       //console.log(arguments);
