--- a/demo/h5demo/getUserMedia.html
+++ b/demo/h5demo/getUserMedia.html
@@ -9,67 +9,67 @@
 </head>
 
 <body>
-  <video  autoplay width="640" height="480" id="video"></video>
+  <video autoplay width="640" height="480" id="video"></video>
   <button id="capture">拍照</button>
   <canvas id="canvas" width="640" height="480"></canvas>
   <script>
-    // function getUserMedia(constraints,success,error){
-    //   if(navigator.mediaDevices.getUserMedia){
-    //     alert("1111111");
-    //     navigator.mediaDevices.getUserMedia(constraints).then(success).catch(error);
-    //   }
-    //   else if(navigator.webkitGetUserMedia){
-    //     navigator.webkitGetUserMedia(constraints,success,error);
-    //   }
-    //   else if(navigator.mozGetUserMedia){
-    //     navigator.mozGetUserMedia(constraints,success,error);
-    //   }
-    //   else if(navigator.getUserMedia){
-    //     navigator.getUserMedia(constraints,success,error);
-    //   }
-    // }
-    //
-    // var video=document.getElementById("video");
-    // var canvas=document.getElementById("canvas");
-    // var context=canvas.getContext("2d");
-    //
-    // function success(stream) {
-    //   var CompatibleURL=window.URL||window.webkitURL;
-    //   video.src=CompatibleURL.createObjectURL(stream);
-    //   video.play();
-    // }
-    // function error(error) {
-    //   console.log("访问失败：",error.name,error.message);
-    // }
-    // if(navigator.mediaDevices.getUserMedia||navigator.getUserMedia||navigator.webkitGetUserMedia||navigator.mozGetUserMedia){
-    //   alert("222222");
-    //   getUserMedia({video:true},success,error);
-    // }
-    // else{
-    //   alert("不支持访问媒体设备");
-    // }
-    // document.getElementById("capture").addEventListener("click",function () {
-    //   context.drawImage(video,0,0,240,160);
-    // })
-    var canvas = document.getElementById('canvas');
-    var context = canvas.getContext('2d');
-    var video = document.getElementById('video');
-
-    // Get access to the camera!
-    if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-      alert("22")
-      // Not adding `{ audio: true }` since we only want video now
-      navigator.mediaDevices.getUserMedia({
-        video: true
-      }).then(function(stream) {
-        video.src = window.URL.createObjectURL(stream);
-        video.play();
-      });
+    function getUserMedia(constraints,success,error){
+      if(navigator.mediaDevices.getUserMedia){
+        alert("1111111");
+        navigator.mediaDevices.getUserMedia(constraints).then(success).catch(error);
+      }
+      else if(navigator.webkitGetUserMedia){
+        navigator.webkitGetUserMedia(constraints,success,error);
+      }
+      else if(navigator.mozGetUserMedia){
+        navigator.mozGetUserMedia(constraints,success,error);
+      }
+      else if(navigator.getUserMedia){
+        navigator.getUserMedia(constraints,success,error);
+      }
     }
-    document.getElementById("capture").addEventListener("click", function() {
-      alert("1111");
-      context.drawImage(video, 0, 0, 640, 480);
-    });
+
+    var video=document.getElementById("video");
+    var canvas=document.getElementById("canvas");
+    var context=canvas.getContext("2d");
+
+    function success(stream) {
+      var CompatibleURL=window.URL||window.webkitURL;
+      video.src=CompatibleURL.createObjectURL(stream);
+      video.play();
+    }
+    function error(error) {
+      console.log("访问失败：",error.name,error.message);
+    }
+    if(navigator.mediaDevices.getUserMedia||navigator.getUserMedia||navigator.webkitGetUserMedia||navigator.mozGetUserMedia){
+      alert("222222");
+      getUserMedia({video:true},success,error);
+    }
+    else{
+      alert("不支持访问媒体设备");
+    }
+    document.getElementById("capture").addEventListener("click",function () {
+      context.drawImage(video,0,0,240,160);
+    })
+    // var canvas = document.getElementById('canvas');
+    // var context = canvas.getContext('2d');
+    // var video = document.getElementById('video');
+    //
+    //
+    // if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+    //   alert("22")
+    //
+    //   navigator.mediaDevices.getUserMedia({
+    //     video: true
+    //   }).then(function(stream) {
+    //     video.src = window.URL.createObjectURL(stream);
+    //     video.play();
+    //   });
+    // }
+    // document.getElementById("capture").addEventListener("click", function() {
+    //   alert("1111");
+    //   context.drawImage(video, 0, 0, 640, 480);
+    // });
   </script>
 </body>
 
