the final version

--- a/demo/h5demo/getUserMedia.html
+++ b/demo/h5demo/getUserMedia.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Take a photo</title>
 </head>
-//PC浏览器上可以调用摄像头，但移动端不行
 <body>
+  <!-- PC浏览器上可以调用摄像头，但移动端不行 -->
   <video autoplay width="640" height="480" id="video"></video>
   <button id="capture">拍照</button>
   <canvas id="canvas" width="640" height="480"></canvas>
