updated img size

--- a/demo/h5demo/manifest/index.html
+++ b/demo/h5demo/manifest/index.html
@@ -15,7 +15,7 @@
     <div id="content">
       <h2>HTML5</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus et perspiciatis illo impedit quidem voluptatibus, cumque numquam natus temporibus maiores a beatae tenetur nobis voluptatem, ad magnam totam aspernatur cupiditate.</p>
-      <img src="img/mylove.jpg" alt="">
+      <img height="200" src="img/mylove.jpg" alt="">
     </div>
     <footer>html5 by <a href="#">JASON</a></footer>
   </div>
